# tuw_eigen

./: CMakeLists.txt  Doxyfile  README.md  package.xml
include/tuw_eigen/: eigen.hpp  geometry_msgs.hpp  line2d.hpp  linesegment2d.hpp  point2d.hpp  point3d.hpp  pose3d.hpp  utils.hpp
src/examples/: CMakeLists.txt  main_example.cpp
src/tuw_eigen/: line2d.cpp  linesegment2d.cpp  point2d.cpp  point3d.cpp  pose3d.cpp
test/: test_eigen.cpp
